--- a/README
+++ b/README
@@ -3,3 +3,7 @@ Oxd-go plugin
 src/oxd-client - client source code
 src/oxd-client-demo - simple communication demo
 src/oxd-client-test - unit tests for communication
+
+```go
+asdasd
+```
